<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddMeetingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/button_previous_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <DatePicker
                android:id="@+id/add_meeting_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_activity_textinputlayout_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meeting_date_picker">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_activity_textinputedittext_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Sujet de la réunion"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/add_activity_spinner_meeting_room"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="@+id/add_activity_textinputlayout_topic"
                app:layout_constraintTop_toBottomOf="@+id/add_activity_textinputlayout_topic" />

            <Spinner
                android:id="@+id/add_activity_spinner_time_slot"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="@+id/add_activity_textinputlayout_topic"
                app:layout_constraintTop_toBottomOf="@+id/add_activity_textinputlayout_topic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_activity_recycler_view_meeting_member_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/add_activity_textinputlayout_topic"
                app:layout_constraintTop_toBottomOf="@+id/add_activity_spinner_meeting_room"
                tools:listitem="@layout/item_list_mail_member" />

            <ImageView
                android:id="@+id/add_activity_add_member_to_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:contentDescription="Ajouter un participant"
                android:src="@drawable/ic_baseline_group_add_36"
                app:layout_constraintEnd_toEndOf="@+id/add_activity_textinputlayout_topic"
                app:layout_constraintTop_toBottomOf="@+id/add_activity_spinner_time_slot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_meeting_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reserver"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_activity_recycler_view_meeting_member_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>