...
                android:text="name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_list_member_add_list_button"/>

            <TextView
                android:id="@+id/item_list_member_mail"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
...
